[package]
name = "sabre"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
regex = "1.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres"] }
shuttle-service = { version = "0.3.3", features = ["sqlx-postgres", "secrets", "web-rocket"] }

[dependencies.rocket_dyn_templates]
features = ["tera"]